compiler-core/templates/docs-css/index.css
/* ... */
.sidebar h2 {
  margin-top: var(--small-gap);
  margin-bottom: var(--tiny-gap);
}

.sidebar h2:first-of-type {
  margin-top: 0;
}

.sidebar ul {
  list-style: none;
  margin: var(--tiny-gap) 0;
  padding: 0;
}

.sidebar li {
  line-height: 1.2;
  margin-bottom: 1px;
}

.sidebar li a {
  display: block;
  padding-top: 2px;
  padding-right: 2px;
  padding-bottom: 3px;
  padding-left: 3px;
  margin-left: -2px;
  border-radius: 1px;
  text-decoration: none;
}

.sidebar li a:hover {
  background: var(--code-background);
}

.sidebar .sidebar-toggle {
  color: var(--pink);
  font-size: calc(0.8 * var(--sidebar-toggle-size));
  flex-shrink: 0;
}

body.drawer-closed .label-open,
body.drawer-open .label-closed {
  display: none;
}

.display-controls {
  display: flex;
  flex-wrap: wrap;
  margin-top: var(--small-gap);
  padding-right: var(--gap);
}

.display-controls .control {
  margin: 0.5rem 0;
}

.display-controls .control:not(:first-child) {
  margin-left: 1rem;
}

.toggle {
  align-items: center;
  display: flex;
  font-size: 0.96rem;
}

.toggle-0 .label:not(.label-0),
.toggle-1 .label:not(.label-1) {
  display: none;
}

.label {
  display: flex;
}

.label .icon {
  margin: 0 0.28rem;
}

/* Module members (types, functions) */

.module-members {
  margin-top: var(--large-gap);
}

.module-member-kind {
  font-size: 2rem;
  color: var(--text);
}

.member {
  margin: var(--large-gap) 0;
  padding-bottom: var(--gap);
}

.member-name {
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-left: 4px solid var(--accent);
  padding: var(--small-gap) var(--gap);
  background-color: var(--accented-background);
}

.member-name h2 {
  display: flex;
  font-size: 1.5rem;
  margin: 0;
}

.member-name h2 a {
  color: var(--text);
  flex: 2;
}

.member-source {
  align-self: baseline;
  flex-shrink: 0;
  line-height: calc(1.4 * 1.5rem);
  margin: 0 0 0 var(--small-gap);
}

/* Custom type constructors */

.custom-type-constructors h3,
.custom-type-constructors h4 {
  margin-top: 0;
  margin-bottom: 0;
}

.custom-type-constructors h4 {
  margin-bottom: 1em;
}

.constructor-list {
  list-style: none;
  padding: 0;
  margin: 0;
}


pre.constructor-name {
  margin-top: 1em;
  margin-bottom: 0;
}

.constructor-item {
  margin-bottom: var(--small-gap);
}

.constructor-row {
  align-items: center;
  display: flex;
}

.constructor-argument-list {
  margin-bottom: var(--small-gap);
}

.constructor-argument-item {
  display: flex;
}

.constructor-argument-label {
  min-width: 10em;
  flex-shrink: 0;
  font-family: "Ubuntu Mono", monospace;
}

.constructor-argument-doc {
  margin-left: var(--small-gap);
}

.constructor-argument-doc :first-child {
  margin-top: 0;
}

@media (max-width: 500px) {

pre.constructor-name {
  min-width: 100vw;
}

  .constructor-argument-item,
  .constructor-argument-label,
  .constructor-argument-doc {
    display: block;
  }

  .constructor-argument-label {
    padding-bottom: .5em;
  }
}

.constructor-item-docs {
  margin-left: var(--large-gap);
  margin-top: var(--gap);
  margin-bottom: var(--gap);
}

.constructor-item .icon {
  flex-shrink: 0;
  font-size: 0.7rem;
  margin: 0 0.88rem;
}

@media (max-width: 500px) {
  .constructor-item .icon {
    display: none;
  }
  .constructor-item-docs {
    margin-left: 0;
  }
}

/* Tables */

table {
  border-spacing: 0;
  border-collapse: collapse;
}

table td,
table th {
  padding: 6px 13px;
  border: 1px solid var(--table-border);
}

table tr:nth-child(2n) {
  background-color: var(--table-background);
}

/* Footer */

.pride {
  width: 100%;
  display: none;
  flex-direction: row;
  position: absolute;
  bottom: 0;
  z-index: 100;
}

.show-pride .pride {
  display: flex;
}

.show-pride .sidebar {
  margin-bottom: var(--gap);
}

.pride div {
  flex: 1;
  text-align: center;
  padding: var(--tiny-gap);
}

.pride .white {
  background-color: var(--white);
}
.pride .pink {
  background-color: var(--pink);
}
.pride .blue {
  background-color: var(--boi-blue);
}

.pride-button {
  position: absolute;
  right: 2px;
  bottom: 2px;
  opacity: 0.2;
  font-size: 0.9rem;
}

.pride-button {
  text-decoration: none;
  cursor: default;
}

/* Icons */

.svg-lib {
  height: 0;
  overflow: hidden;
  position: absolute;
  width: 0;
}

.icon {
  display: inline-block;
  fill: currentColor;
  height: 1em;
  stroke: currentColor;
  stroke-width: 0;
  width: 1em;
}

.icon-gleam-chasse {
  width: 8.182em;
}

.icon-gleam-chasse-2 {
  width: 4.909em;
}

/* Pre-Wrap Option */

body.prewrap-on code,
body.prewrap-on pre {
  white-space: pre-wrap;
}
/* ... */

